--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
 			"@/*": ["src/*"]
 		},
 		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true
+		"experimentalDecorators": true,
+		"allowUnreachableCode": false,
+		"noUnusedLocals": true
 	},
 	"include": ["src/**/*"]
 }
